--- a/Projeto final- PortFlow.css
+++ b/Projeto final- PortFlow.css
@@ -7,61 +7,47 @@
 }
 header{
     display:flex;
-    position: fixed;
-}
-@media(max-width:1075px){
-    .header{
-        display:inline;
-        padding-top: 100%;
-        position:none;
-    }
+    position:relative;
+    
 }
 .logo{
-    display:inline-block;
+    display:flex;
     margin-left: 2vw;
     margin-top: 1.2vh;
     padding:3vh;
-    position: fixed;
+    
+}
+
+.botao-logo{
+    width: 8vw;
+    height: 3vh;
+    transform:scale(0,2);
 }
 nav{
-  display: inline-block;
-  padding: 3.5vh 0 0 38vw;
+  display: flex;
+  padding: 2.5vh 0 0 0vw;
+  margin-left: 35%;
   vertical-align: top;
   cursor:pointer;
-  position: fixed;
+
 }
 ul{
     display:flex;
-    position: fixed;
+    left:30%;
+    width: 42vw;
 }   
 li{
-    display:inline-block;
+    display:flex;
     margin-right:3vw;
     padding:3vh;
     transition: all 0.3s;
     color:darkgray;
+    top: 1%;
 }
 li:hover{
     font-weight: 900;
     width:40%;
     transform: scale(1.1);
-}
-@media(max-width:1075px){
-    nav{
-        width:3.5vw;
-        margin-bottom: 30%;
-        margin-left: 70vw;
-        position:relative;
-    }
-}
-@media(max-width:1075px){
-    li{
-        padding: 0.3vh 0 0 18vw;
-        margin-bottom: 30%;
-        margin-left: 70vw;
-        position:absolute;
-
-    }
 }
 main{
     height: 160vh;
@@ -75,11 +61,11 @@ main{
 h2{
     display:flex;
     position:absolute;
-    top:45%;
-    font-size: 455%;
+    top:42%;
+    font-size: 425%;
     font-weight:bold;
-    margin-left: 40px;
-    transition: all o.3s;
+    margin-left: 5.5vh;
+    transition: all o.2s;
     cursor:grab;
 }
 h2:hover{
@@ -90,16 +76,17 @@ h3{
     position:absolute;
     top:60%;
     font-weight: lighter;
-    margin-left: 40px;
+    margin-left: 6.2vh;
     font-size:22px;
-    animation: 3s;
+    animation: 2s;
     cursor:cell; 
     
 }
 h3:hover{
-    margin-left:4px;
+    margin-left:2px;
 
 }
+
 .laranja{
     display:flexbox;
     
@@ -110,6 +97,7 @@ h3:hover{
     object-fit:cover;
     
 }
+
 .relatoriosimg{
     width: 100%;
     padding: 5% 0;
@@ -125,21 +113,79 @@ h3:hover{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
-        
+      
 }
 .imgdamain{
     width: 24%;
     height: 100%;
-}
+    border:double rgb(93, 155, 174);
+    transition: all .5s;
+    cursor:pointer;
     
-
-
-/*.redessocias{
-    display:flex;
 }
-rodape{
-    margin-bottom: 0%;
-    margin-right:5%;
-    padding:1.5vh 1 1 28vw;
-}*/
+.imgdamain:hover{
+    border:10px solid rgb(241, 196, 124);
+    border-radius:50%;
+    -webkit-filter:drop-shadow(10px 5px 1px rgb(68, 174, 158));
+    filter:drop-shadow(10px 5px 1px)rgb(68, 174, 158);
+    -webkit-transform:rotateZ(-360deg) scale(1.5);
+    transform:rotateZ(-360deg) scale(1.5);
+}
+ 
+footer{
+    padding: 1.5vh 0 0 5vw;
+    width:95.5vw;
+    margin-top: 32vw;
+    background:#00000029;
+    display:flex;
+    position: relative;
+    margin-left: 2%;
+}
+.redessocias{
+    height: 5vh;
+    justify-content: space-evenly;
+  
+}
+.rodape{
+    width: 19vw;
+    justify-content: space-evenly;
+    display: flex;
+    margin-right:80vw;
+    padding:2vh;
+    display:flex;
+    left:57%;
+}
+.contato{
+    width: 3,3vw;
+    height: 4vh;
+    display: inline-block;
+    vertical-align: 70%;
+
+}
+.c{
+    width: 6vw;
+    font-weight:bolder;
+    margin-left:40%;
+    position: absolute;
+    top:29%;
+
+}
+.l{
+    margin-left: 50%;
+    padding:3vh 0 0;
+    color:darkgrey;
+    font: weight 900px;
+    position: absolute;
+    top:3%;
+    
+}    
+link-topo{
+    text-decoration: none;
+    color:rgb(184, 178, 178);
+    background-color: rgb(55, 52, 52);
+    padding: 5px;
+    height: 25px;
+    /*position:fixed;*/
+    left: 95%;
+    bottom: 5%;
+}
