--- a/style.css
+++ b/style.css
@@ -4,98 +4,64 @@
     list-style: none;
     box-sizing:border-box;
     font-family: Montserrat;
+    text-decoration: none;
 }
 
-header{
-    display:flex;
-    position:relative;
-    
-}
-
-.logo{
-    display:flex;
-    margin-left: 2vw;
-    margin-top: 1.2vh;
-    padding:3vh;
-    
+.h-container{
+    width: 100%;
+    padding: 2rem 0 2rem 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .botao-logo{
-    width: 8vw;
-    height: 3vh;
-    transform:scale(0,2);
+    display: none;
 }
-nav{
-  display: flex;
-  padding: 2.5vh 0 0 0vw;
-  margin-left: 35%;
-  vertical-align: top;
-  cursor:pointer;
 
+.h-nav{
+    width: 30%;
 }
+
 ul{
     display:flex;
-    left:30%;
-    width: 42vw;
-}   
+    justify-content: space-evenly;
+    align-items: center;
+}  
+
 li{
     display:flex;
-    margin-right:3vw;
-    padding:3vh;
     transition: all 0.3s;
     color:darkgray;
-    top: 1%;
-}
-li:hover{
-    font-weight: 900;
-    width:40%;
-    transform: scale(1.1);
-}
-main{
-    height: 160vh;
-    width:100%;
-             
-}
-.palavras{
-    color:white;
-       
-}
-h2{
-    display:flex;
-    position:absolute;
-    top:42%;
-    font-size: 425%;
-    font-weight:bold;
-    margin-left: 5.5vh;
-    transition: all o.2s;
-    cursor:grab;
-}
-h2:hover{
-    transform: scale(1.1);
-}
-h3{
-    display:flex;
-    position:absolute;
-    top:60%;
-    font-weight: lighter;
-    margin-left: 6.2vh;
-    font-size:22px;
-    animation: 2s;
-    cursor:cell; 
-    
-}
-h3:hover{
-    margin-left:2px;
 }
 
-.laranja{
-    display:flexbox;
+li:hover{
+    font-weight: 700;
+    transform: scale(1.1);
 }
-.fruta{
-    width:100%;
-    max-height: 70vh;
-    object-fit:cover;
-    
+
+.palavras{
+    width: 100%;
+    padding-inline: 2.5rem;
+    min-height: 60vh;
+    background-image: url('laranja\ azul.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.palavras h2{
+    font-size: 85px;
+    color: white;
+    line-height: 1.5;
+}
+
+.palavras p{
+    font-size: 40px;
+    font-weight: lighter;
+    color: white;
 }
 
 .relatoriosimg{
@@ -106,23 +72,24 @@ h3:hover{
     align-items: center;
     flex-direction: column;
 }
+
 .catalogodeimg{
     width: 83.5%;
     height: 100%;
     padding-bottom: 1%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-      
+    justify-content: space-between; 
 }
+
 .imgdamain{
     width: 24%;
     height: 100%;
     border:double rgb(93, 155, 174);
     transition: all .5s;
     cursor:pointer;
-    
 }
+
 .imgdamain:hover{
     border:10px solid rgb(241, 196, 124);
     border-radius:50%;
@@ -131,61 +98,135 @@ h3:hover{
     -webkit-transform:rotateZ(-360deg) scale(1.5);
     transform:rotateZ(-360deg) scale(1.5);
 }
- 
-footer{
-    padding: 1.5vh 0 0 5vw;
-    width:95.5vw;
-    margin-top: 32vw;
-    background:#00000029;
-    display:flex;
-    position: relative;
-    margin-left: 2%;
-}
-.redessocias{
-    height: 5vh;
-    justify-content: space-evenly;
-  
-}
-.rodape{
-    width: 19vw;
-    justify-content: space-evenly;
+
+.redessociais{
+    width: 100%;
+    padding: 1.5rem 9.5rem;
+    background-color: #00000029;
     display: flex;
-    margin-right:80vw;
-    padding:2vh;
-    display:flex;
-    left:57%;
+    align-items: center;
 }
-.contato{
-    width: 3,3vw;
-    height: 4vh;
-    display: inline-block;
-    vertical-align: 70%;
 
+.rodape{
+    display: flex;
+    gap: 0.5rem;
 }
-.c{
-    width: 6vw;
-    font-weight:bolder;
-    margin-left:40%;
-    position: absolute;
-    top:29%;
 
+.f-txt{ 
+    display: flex;
+    column-gap: 1rem;
+    margin-left: 9.5rem;
 }
-.l{
-    margin-left: 50%;
-    padding:3vh 0 0;
-    color:darkgrey;
-    font: weight 900px;
-    position: absolute;
-    top:3%;
-    
-}    
-link-topo{
-    text-decoration: none;
-    color:rgb(184, 178, 178);
-    background-color: rgb(55, 52, 52);
-    padding: 5px;
-    height: 25px;
-    /*position:fixed;*/
-    left: 95%;
-    bottom: 5%;
+
+.f-txt p{
+    font-weight: 700;
+    font-size: clamp(0.7rem, 1.2vw, 1.5rem);
+}
+
+.f-txt h4{
+    font-size: clamp(0.6rem, 1.2vw, 1.5rem);
+}
+
+.footer-btn{
+    display: none;
+    padding: 0.3em 1.5em;
+    border: 1px solid #707070;
+    background-color: #333333;
+    color: #CCCCCC;
+}
+
+@media (max-width:1035px) {
+    .h-nav{
+        width: 50%;
+    }
+
+    .redessociais{
+        padding: 1rem;
+        justify-content: space-between;
+    }
+
+    .copy{
+        margin-left: 2rem;
+    }
+}
+
+@media (max-width:768px) {
+    .h-container{
+        padding: 0;
+    }
+
+    h1,
+    .h-nav{
+        display: none;
+    }
+
+    .botao-logo{
+        display: inline;
+        width: 85px;
+    }
+
+    .palavras{
+        min-height: 40vh;
+    }
+
+    .palavras h2{
+        max-width: 10ch;
+        font-size: 60px;
+        line-height: 1;
+        margin-block: 10rem 2rem;
+    }
+
+    .palavras p{
+        font-size: 20px;
+    }
+
+    .catalogodeimg{
+        flex-direction: column;
+        align-items: center;
+        row-gap: 1.5rem;
+    }
+
+    .imgdamain{
+        width: 70%;
+    }
+
+    .redessociais{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        row-gap: 0.5rem;
+    }
+
+    .rodape{
+        width: 100%;
+        background-color: #7FDBD4;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .contato{
+        width: 35px;
+        aspect-ratio: 1;
+        object-fit: contain;
+    }
+
+    .copy{
+        width: 100%;
+        margin-left: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .f-txt{
+        width: 90%;
+        margin-left: 0;
+        flex-direction: column;
+        word-break: break-all;
+    }
+
+    .footer-btn{
+        display: initial;
+    }
 }
